syntax = "proto3";

option go_package = ".;rpc";

service GameServer {
  // Returns the map around the specific location
  rpc GetNearMap(GetMapRequest) returns (GetMapResponse);
  rpc SubscribeForEvents(SubscribeRequest) returns (stream Event);
}

message SubscribeRequest {

}

message Event {
  oneof payload {
    ObjectPlacedEvent objectPlaced = 1;
    ObjectRemovedEvent objectRemoved = 2;
    PlayerMovedEvent playerMoved = 3;
  }
}

message ObjectPlacedEvent {
  Object object = 1;
}

message ObjectRemovedEvent {
  int64 id = 1;
}

message PlayerMovedEvent {
  int64 playerID = 1;
  Location location = 2;
}

message Object {
  int64 id = 1;
  int64 ownerID = 2;
  string name = 3;
  Location location = 4;
}

message Location {
  int32 latitude = 1;
  int32 longitude = 2;
}

message GetMapRequest {
  Location location = 1;
}

message GetMapResponse {
  repeated Object objects = 1;
}